# township

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUTURE_WORK.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  RESPONSIBLE_USE.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_persona.yml  new_scenario.yml
.github/workflows/: backend.yml  docker.yml  frontend.yml  pages.yml  secrets.yml  smoke.yml
agents/dover/: colombian-restaurant-owner.md  daca-recipient.md  dominican-retiree.md  mexican-construction-worker.md  puerto-rican-single-mother.md  white-longtime-resident.md
agents/montclair/: elderly-widow.md  jewish-community.md  latinx-family.md  progressive-couple.md  retired-educator.md  shop-owner.md  young-artist.md
agents/parsippany/: gujarati-grandparent.md  healthcare-worker.md  it-professional-family.md  restaurant-owner.md  retired-executive.md  south-asian-couple.md  white-commuter.md
agents/randolph/: finance-commuter.md  indian-engineer.md  local-business-owner.md  retired-veteran.md  stay-at-home-mom.md  young-homebuyers.md
backend/: __init__.py  cli.py  env.py  main.py  requirements.txt
backend/core/: agent_loader.py  artifacts.py  event_bus.py  scenario.py  storage.py  types.py  wire.py
backend/providers/: __init__.py  anthropic_api.py  anthropic_client.py  base.py  bedrock.py  factory.py  mock.py  openai_compat.py  (+1 more)
data/: README.md  agent_thoughts_cache.json  debate-excerpts.json  god_view_scenarios.json
docs/: README.md  api.md  architecture.md  deployment.md  faq.md  nj11-retrospective.md  persona-authoring.md  persona-template.md  scenario-format.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scenarios/: __init__.py
scripts/: generate_demo_cache.py
tests/: conftest.py  test_backend_contracts.py  test_cli.py  test_environment.py  test_journal_bounds.py  test_mapgen_safety.py  test_mock_simulation.py  test_persona_lint.py  test_private_player_state.py  test_providers.py  test_runs_and_recap.py  test_scenario_contract.py  test_security_boundaries.py  test_simulation_runtime_safety.py  test_wire_contract.py
(+198 files in other folders)
