# ───────────────────────────────────────────────────────────────────────────
# Township — packaging + tool configuration
#
# This is an application repo, not a PyPI library: no custom [build-system]
# is configured (the setuptools default applies), but the file is fully valid
# for `pip install -e ".[dev]"`.
# ───────────────────────────────────────────────────────────────────────────

[project]
name = "township"
version = "0.1.0"
description = "A civic deliberation engine — AI residents deliberate elections and policy questions in a living pixel town."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Chuyue Wang" }]
keywords = [
    "generative-agents",
    "multi-agent",
    "llm",
    "simulation",
    "civic-tech",
    "deliberation",
    "elections",
    "fastapi",
    "phaser",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Sociology",
]

# Floors track the versions the app is actually developed and tested against.
dependencies = [
    "fastapi>=0.133",
    "uvicorn[standard]>=0.46",
    "websockets>=16.0",
    "anthropic[bedrock]>=0.101",
    "boto3>=1.43",
    "pydantic>=2.12",
    "python-frontmatter>=1.1",
    "aiofiles>=25.1",
    "httpx>=0.28",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
# OpenAI-compatible provider backends (OpenAI, Ollama, LM Studio, OpenRouter).
openai = ["openai>=1.40"]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx",
]

[project.urls]
Repository = "https://github.com/StevenWang-CY/township"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: persona/prompt builders carry long prose strings; wrapping them harms
# readability more than the rule helps. Everything else is enforced.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
